--- a/themes/yilia/layout/_partial/css.ejs
+++ b/themes/yilia/layout/_partial/css.ejs
@@ -1,2 +1,4 @@
 <link rel="stylesheet" type="text/css" href="<%=config.root%>./main.b3331d.css">
 <link rel="stylesheet" type="text/css" href="<%=config.root%>./profile.min.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./bootstrap.min.css">
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
