--- a/themes/yilia/layout/_partial/profile.ejs
+++ b/themes/yilia/layout/_partial/profile.ejs
@@ -1,192 +1,5 @@
 <%- partial('_partial/head') %>
 
-
-<style>
-    .profile-container {
-        text-align: center;
-    }
-
-    .profile {
-        min-height: 100vh;
-        padding: 10px;
-        line-height: 1.4;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        padding-top: 50px;
-        padding-bottom: 50px;
-        min-width: 320px;
-        /*border-style: solid;*/
-    }
-
-    .profile-content {
-        background-color: #fff;
-        width: 620px;
-        max-width: calc(100vw - 10px);
-        border-radius: 4px;
-        margin-top: 60px;
-    }
-
-    .image {
-        margin: 0 auto;
-        margin-top: -60px;
-    }
-
-    .name-headline {
-        text-align: center;
-    }
-
-    .name {
-        font-size: 20px;
-        line-height: 1.2;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        font-weight: 700;
-        /*margin:0;*/
-        color: #333;
-    }
-
-    .headline {
-        font-size: 16px;
-        line-height: 1.2;
-        font-weight: 700;
-        /*margin: 0;*/
-    }
-
-    .body {
-        display: flex;
-        flex-direction: column;
-        padding: 20px;
-    }
-
-    .spotlight {
-        margin: 0 auto;
-    }
-
-    .button.large {
-        font-size: 16px;
-        line-height: 38px;
-        padding: 0 20px;
-    }
-
-    .button {
-        display: inline-block;
-        border-radius: 5px;
-        text-align: center;
-    }
-
-    .short-bio {
-        font-size: 16px;
-        max-width: 100%;
-        margin-top: 20px;
-        font-weight: normal;
-    }
-
-    .inline {
-        display: flex;
-        padding: 0;
-        margin: 0;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    ul.inline > li {
-        display: inline-block;
-        vertical-align: baseline;
-    }
-
-    .interests {
-        margin-top: 20px;
-    }
-
-    ul.inline {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        padding: 0;
-        margin: 0;
-        list-style: none;
-        flex-wrap: wrap;
-        /*max-width: 400px;*/
-        /*ma    rgin: 0 auto;*/
-        /*font-size: 14px;*/
-    }
-
-    li.interest {
-        padding: 0;
-        margin: 5px;
-    }
-    li.interest span{
-        color: #9f9f9f;
-    }
-
-    ul.inline {
-        vertical-align: baseline;
-    }
-
-    .meta {
-        margin-top: 20px;
-    }
-
-    .meta-sections {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        font-size: 14px;
-        margin: 0 auto;
-        padding: 0;
-        max-width: 400px;
-    }
-
-    .meta-header {
-        font-size: 12px;
-        font-weight: 700;
-        text-transform: uppercase;
-    }
-
-    .text.ellipsis {
-        overflow: hidden;
-        -ms-text-overflow: ellipsis;
-        text-overflow: ellipsis;
-    }
-
-    .meta-list {
-        padding: 0;
-    }
-
-    ul {
-        list-style: none;
-    }
-
-    .social-links {
-        margin-top: 20px;
-    }
-
-    .social-link {
-        width: 36px;
-        height: 36px;
-        line-height: 36px;
-        display: block;
-        padding: 0;
-        margin: 10px;
-        cursor: pointer;
-        font-size: 30px;
-    }
-
-    a.social-link svg {
-        fill: rgba(54, 71, 78, .7);
-        width: 100%;
-        height: 100%;
-    }
-
-    .gly-icon {
-        margin-right: .4em;
-    }
-</style>
-
 <div class="profile-container">
     <div class="profile">
         <style>
@@ -216,7 +29,7 @@
 
             <div class="body">
                 <section class="spotlight">
-                    <a href="http://hiraku.tw" target="_blank" rel="noopener noreferrer"
+                    <a href="/archives/" target="_blank" rel="noopener noreferrer"
                        class="spotlight button large dark glyph-article"
                        style="background-color:#305B90;color:#fff;font-weight:bold;" data-reactid="44">
                         <span class="glyphicon gly-icon">&#xe056;</span>
@@ -332,6 +145,27 @@
                                 class="SVGInline-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path
                                 d="M1000 500c0 277-223 500-500 500s-500-223-500-500 223-500 500-500 500 223 500 500zm-125-183c-25 11-53 18-82 22 30-17 51-45 61-79-28 17-57 28-89 35-25-28-62-45-103-45-78 0-141 63-141 142 0 10 1 22 3 32-118-5-223-62-294-149-11 22-18 46-18 72 0 50 24 93 62 118-23 0-45-7-64-18v2c0 69 49 126 114 140-12 3-24 4-37 4-9 0-19-1-27-2 18 57 71 95 132 96-48 38-108 65-176 65-11 0-23-1-33-2 62 40 138 62 217 62 262 0 404-216 404-404v-18c28-19 51-45 71-73z"></path></svg></span></a>
                         </li>
+
+
+
+                        <li><a class="social-link" title="Visit me on Xiachufang"
+                               href="https://www.xiachufang.com/cook/100314030/" target="_blank"
+                               rel="noopener noreferrer" data-reactid="87"><span class="SVGInline"
+                                                                                 data-reactid="88"><svg
+                                class="SVGInline-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
+<g fill-rule="evenodd" fill="white" stroke="black" stroke-width="1" >
+  <circle cx="512" cy="512" r="512" stroke="black"
+          stroke-width="2" fill="rgba(54, 71, 78, .7)"/>
+
+<path d="M217.06 198.07c143.31-0.16 286.63-0.02 429.94-0.07 61.31 0.05 122.62-0.1 183.93 0.07 0.09 31.95 0.12 63.9-0.02 95.85-170.62 0.19-341.24-0.06-511.86 0.13-0.22 89.31 0.09 178.63 0.1 267.95-0.05 7.01 0.28 14.05-0.57 21.04-8.2 80.2-15.95 160.45-24.37 240.63-35.06-3.15-70.11-6.41-105.17-9.48 9.04-97.07 18.84-194.08 27.98-291.14 0.2-108.32-0.14-216.65 0.04-324.98z" p-id="1831"></path><path d="M714.07 326.08c30.95-0.13 61.91-0.13 92.86 0 0.2 17.61-0.09 35.23 0.15 52.85 9.59 0.21 19.18-0.06 28.78 0.15-0.15 33.28 0.03 66.55-0.09 99.83-9.57 0.24-19.13-0.07-28.7 0.17-0.23 115.95 0.06 231.91-0.11 347.86-53.62 0.15-107.25 0.14-160.87 0-0.1-34.95-0.18-69.92 0-104.88 22.6-0.26 45.21 0.07 67.81-0.16 0.17-20.97 0.01-41.94 0.1-62.9 0.05-3.31 0.05-6.62-0.25-9.91-8.04 0.35-15.84 2.57-23.78 3.71-13.32 2.12-26.54 5-39.92 6.66-5.51-24.53-11.48-48.94-17.19-73.42-2.9-13.06-6.46-25.99-8.96-39.12 23.41-3.24 46.79-6.62 70.2-9.81 5.45-0.74 10.89-1.74 16.4-2.08 1 8 1.63 16.07 3.12 24.01 0.67-9 0.25-18.03 0.37-27.04-0.01-17.68 0.07-35.36-0.02-53.03-30.31 0.02-60.61 0.1-90.91-0.04-0.09-33.28-0.11-66.57 0.01-99.85 30.29-0.23 60.58 0.06 90.86-0.15 0.21-17.61-0.07-35.24 0.14-52.85zM352.01 327.01c81.3 0.04 162.61-0.11 243.91 0.07-0.01 30.29-0.17 60.57-0.01 90.86-81.29 0.11-162.59 0.02-243.89 0.04-0.04-30.32-0.02-60.65-0.01-90.97zM356.04 455.04c79.97-0.05 159.94-0.11 239.91 0.04-0.17 65.94-0.12 131.89-0.01 197.84-5.86 0.21-11.72-0.02-17.58 0.21-0.62 21.96-1.51 43.92-1.95 65.9 11.85-0.31 23.66-1.3 35.5-1.79 0.3 20.25 0.04 40.51 0.13 60.76-0.12 8.49 0.26 16.99-0.23 25.47-88.54 6.89-177.04 14.58-265.58 21.51-1.29-27.32-2.15-54.66-3.31-81.99-0.18-3.61-0.39-7.21-0.2-10.81 10.77-0.55 21.54-1.26 32.31-1.72 1.05-0.29 3.7 0.41 3.37-1.44-1.6-25.3-3.65-50.58-5.5-75.86-5.61-0.32-11.23-0.05-16.84-0.19-0.16-65.97-0.09-131.95-0.02-197.93m79.03 76.03c-0.14 15.63-0.08 31.27-0.01 46.9 27.61-0.02 55.23 0.08 82.85-0.06 0.13-15.62 0.08-31.24 0.04-46.86-27.62-0.07-55.25-0.1-82.88 0.02m19.16 122.03c1.53 24.12 3.33 48.22 4.8 72.35 12.93-0.09 25.83-1.39 38.75-1.84 0.9-23.5 1.28-47.01 2-70.51-15.18-0.15-30.37-0.15-45.55 0z" p-id="1832"></path>
+
+</g>
+
+
+                                </svg></span></a>
+                        </li>
+
+
 
                     </ul>
                 </section>
