--- a/themes/yilia/layout/_partial/profile.ejs
+++ b/themes/yilia/layout/_partial/profile.ejs
@@ -29,13 +29,13 @@
 
             <div class="body">
                 <section class="spotlight">
-                    <a href="/archives/" target="_blank" rel="noopener noreferrer"
+                    <a href="/map.html" target="_blank" rel="noopener noreferrer"
                        class="spotlight button large dark glyph-article"
                        style="background-color:#305B90;color:#fff;font-weight:bold;" data-reactid="44">
-                        <span class="glyphicon gly-icon">&#xe056;</span>
-                        Read
-                        my
-                        blog</a>
+                        <span class="glyphicon gly-icon">&#xe135;</span>
+                        My
+                        Tracks
+                        </a>
                 </section>
 
                 <!--<section class="short-bio">-->
@@ -98,7 +98,7 @@
                         </li>
 
 
-                        
+
                         <!--Douban-->
                         <li>
                             <a href="https://www.douban.com/people/49192187/" class="social-link" title="Visit me on Douban" target="_blank"
@@ -128,7 +128,7 @@
                                 </svg></span></a>
                         </li>
 
-                       
+
                         <!--Instagram-->
                         <li>
                             <a class="social-link" title="Visit me on Instagram"
